--- a/public/css/media.css
+++ b/public/css/media.css
@@ -8,25 +8,67 @@
 		margin-left: 60px;
 		text-align: center;
 	}
+	.head{
+		height: 340px;
+		width: 100%;
+		background-color: #009b5f;
+	}
+
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
-
+	.head{
+		height: 320px;
+		width: 100%;
+		background-color: #009b5f;
+	}
 	.head h1{
 
-		font-size: 35px;
+	    font-size: 35px;
 	}
 	.head p{
-		font-size: 14px;
-		margin-top: 20px;
-		margin-left: 60px;
-		text-align: center;
+	    font-size: 13px;
+	    margin-top: 20px;
+	    margin-left: 60px;
+	    text-align: center;
 	}
 	#h-search{
-		margin: 10px 30px;
+	    margin: 10px 30px;
 	}
+	.add-class{
+	    margin: 15px 70px;
+	}
+	#h-search input[type="text"] {
+    	height: 45px;
+    	width: 100%;
+    	padding: 10px;
+    	font-size: 14px;
+    	color: #78828C;
+    	border: 1px solid #DDDDDD;
+	}
+	.detail_panel{
+		border: 1px solid #ddd;
+		border-radius: 4px;
+		height: 950px;
+		margin: 20px 30px;
+		background-color: #ffffff;
+	}
+	.go_channel_trade{
+		cursor: pointer;
+		text-align: center;
 
+		border: 1px solid transparent;
+		white-space: nowrap;
+		padding: 5px;
+		font-size: 14px;
+		border-radius: 4px;
+		background-color: #63b4f4;
+		color: #000000;
+		font-weight: bold;
+		margin: 0 10px;
+		width: 100%;
+	}
 }
 
 /* Small Devices, Tablets */
@@ -66,6 +108,11 @@
 		height: 64px;
 		width: 64px;
 	}
+	.head{
+		height: 350px;
+		width: 100%;
+		background-color: #009b5f;
+	}
 	.head h1{
 		margin-top: 0px;
 		text-align: right;
@@ -73,9 +120,9 @@
 		font-size: 30px;
 	}
 	.head p{
-		font-size: 15px;
+		font-size: 14px !important;
 		margin-left: 20px;
-		width: 300px;
+		width: 100%;
 	}
 	#h-search{
 		margin: 0px 10px 10px 0px;
@@ -111,13 +158,75 @@
 		width: 100%;
 		margin: 5px 0;
 	}
+	.table_trade, thead, tbody, th, td, tr {
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	.table_trade thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	.table_trade a{
+
+		width: 100px;
+	}
+	.table_trade tr { border: 1px solid #ccc; }
+
+	.table_trade td {
+		/* Behave  like a "row" */
+		border: none!important;
+		width: 100%!important;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	.table_trade td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+		content: attr(data-label);
+		font-size: 14px;
+		text-align: left;
+	}
+	.add-class{
+		margin: 5px;
+	}
+	#h-search input[type="text"] {
+		height: 45px;
+		width: 100%;
+		padding: 10px;
+		font-size: 14px;
+		color: #78828C;
+		border: 1px solid #DDDDDD;
+	}
+	.head p{
+		font-size: 1.2em;
+		text-align: center;
+	}
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+	.home_news img{
+		height: 150px;
+		width: 200px;
+	}
+	.head{
+		height: 400px;
+		width: 100%;
+		background-color: #009b5f;
+	}
 	.head p{
 		font-size: 13px;
-		margin-left: -110px;
+		margin-left: -80px;
+		text-align: center;
 		width: 300px;
 	}
 
@@ -132,6 +241,33 @@
 	.one_news{
 		width: 100%;
 		margin: 5px 0;
+	}
+	.add-class{
+		margin: 10px auto;
+		position: relative;
+		top: 100%;
+		right: 20%;
+	}
+	#h-search input[type="text"] {
+		height: 45px;
+		width: 100%;
+		padding: 10px;
+		font-size: 14px;
+		color: #78828C;
+		border: 1px solid #DDDDDD;
+	}
+	#h-search{
+		position: relative;
+		bottom: 0;
+		right: 30px;
+	}
+	.detail_panel{
+		border: 1px solid #ddd;
+		border-radius: 4px;
+		height: 1150px;
+		margin: 20px 30px;
+		background-color: #ffffff;
+
 	}
 }
 
